--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "type": "module",
   "devDependencies": {
     "@arethetypeswrong/cli": "^0.16.4",
+    "@changesets/cli": "^2.27.8",
     "prettier": "^3.3.3",
     "tsup": "^8.3.0",
     "typescript": "^5.6.2",
@@ -41,6 +42,8 @@
     "test": "vitest run",
     "format": "prettier --write .",
     "check-format": "prettier --check .",
-    "check-exports": "attw --pack ."
+    "check-exports": "attw --pack .",
+    "local-release": "changeset version && changeset publish",
+    "prepublishOnly": "npm run ci"
   }
 }
