--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typescript-package",
+  "name": "my-typescript-package-demo",
   "version": "1.0.1",
   "description": "A demo package for Total TypeScript",
   "keywords": [
